fix select behavior on mobile

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,8 +2,12 @@ main {
   padding: 20px;
   height: 1000px;
   display: grid;
-  grid-template-columns: 250px minmax(0, 1fr);
+  grid-template-columns: 1fr;
   gap: 20px;
+
+  @media screen and (min-width: 768px) {
+    grid-template-columns: 250px minmax(0, 1fr);
+  }
 }
 
 ::ng-deep {
