--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -13,6 +13,7 @@ button {
   border: none;
   background: none;
   font: inherit;
+  color: inherit;
 }
 
 h1,
